Use correct webkit flags for text align

--- a/styles/scrabble.css
+++ b/styles/scrabble.css
@@ -73,6 +73,7 @@
 }
 .listGameNameInput {
 	text-align: center;
+	text-align: -webkit-center;
 	font-weight: bold;
 	font-size: 16px;
 	border-radius: 3px;
@@ -449,6 +450,7 @@ body.scrabble {
     font-size: 50px;
     font-family: 'Eurostile';
     text-align: center;
+    text-align: -webkit-center;
     text-transform: uppercase;
 
     background-color: #a47449; /* tile brown */
@@ -559,7 +561,8 @@ body.scrabble {
     margin-right: 5px;
 }
 .systemChatMessageLine {
-	/* text-align: center; */
+	/* text-align: center;
+	text-align: -webkit-center; */
 	color: var(--text-color-light);
 	display: flex;
 	justify-content: center;
@@ -578,6 +581,7 @@ body.scrabble {
 	color: red;
 	width: 100%;
 	text-align: center;
+	text-align: -webkit-center;
 	border-bottom: 1px solid red;
 	line-height: 0.1em;
 	margin: 10px 0 5px;
@@ -653,6 +657,7 @@ body.scrabble {
 #addFriendField {
 	width: calc(100% - 40px);
 	text-align: center;
+	text-align: -webkit-center;
 }
 
 /* animations */
